0.17.1 (unreleased)
===================

Bugs Fixed:

 * Use English text as the default-of-last-resort for all internationalized
   strings if no translation is available in a given language. (egj)

 * Requesting membership to a project when the user already has a pending
   membership no longer causes a site error if the project's title contains
   non-ASCII characters. (#2807) (egj, tcoulter)

 * Account confirmation emails containing non-ASCII text were getting their
   click-to-confirm URL mangled. Confirmation emails are now properly
   encoded to quoted-printable to fix this. (#2808) (egj)

 * Some site emails were being sent with mangled headers when sent in French,
   Portugese and Spanish, causing them to appear in the user's inbox with no
   subject. (#2823) (egj, tcoulter)

 * Projects with non-ASCII titles can now be deleted without errors. (#2824)
   (egj, tcoulter)

 * Fixed broken interaction with Plone's Link Integrity Checker, which 
   was causing erroneous warnings about link integrity to be displayed to
   users in some circumstances of project deletion. (#2825) (egj, tcoulter)

 * Project members are now listed on the manage-team page in alphabetical
   order, case insensitive, sorted on username. (#2751) (egj)

 * Test member data now contains non-ASCII characters to provide better
   coverage re: i18n and l10n issues. (rafrombrc)

 * We now set Expires and Last-Modified headers on member portraits,
   for cacheability. (slinkp)

Also various Listen i18n fixes -- need to catalog those here and/or there.


0.17.0 (2009-05-09)
===================

Data Migrations:

 * Run the upgrades through 0.17 using the portal_setup tool (see 0.15.0 
   change notes, below, for instructions) after you upgrade to 0.17. There
   are two migrations: one to mark "project-discussion" mailing lists with
   a marker interface (about which see "Mailing lists now support..." below)
   and another to retitle member areas (#2779 and see below)


Features Added:
